# seis-statics

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: compose-dev.yaml
.github/workflows/: tests.yml
.issue_forge/: project.sh
docs/: refraction.md
tests/: parity_manifest.md  test_seis_statics_contract.py  test_seis_statics_datum_math.py  test_seis_statics_endpoint_sum_graph.py  test_seis_statics_no_app_dependency.py  test_seis_statics_package_import.py  test_seis_statics_refraction_bedrock.py  test_seis_statics_refraction_cell_coordinates.py  test_seis_statics_refraction_cell_design_matrix.py  test_seis_statics_refraction_cell_grid.py  test_seis_statics_refraction_cell_regularization.py  test_seis_statics_refraction_cell_robust_synthetic.py  test_seis_statics_refraction_cell_solver.py  test_seis_statics_refraction_datum.py  test_seis_statics_refraction_design_matrix.py  test_seis_statics_refraction_field_composition.py  test_seis_statics_refraction_first_layer.py  test_seis_statics_refraction_half_intercept.py  test_seis_statics_refraction_import.py  test_seis_statics_refraction_layer_config.py  test_seis_statics_refraction_layer_observations.py  test_seis_statics_refraction_manual_static.py  test_seis_statics_refraction_multilayer_conversion.py  test_seis_statics_refraction_multilayer_solver.py  test_seis_statics_refraction_options.py  test_seis_statics_refraction_solver.py  test_seis_statics_refraction_source_depth.py  test_seis_statics_refraction_status.py  test_seis_statics_refraction_t1lsst.py  test_seis_statics_refraction_t1lsst_multilayer.py  (+14 more)
(+38 files in other folders)
